# simplejwt-demo

./: .gitignore  LICENSE  README.md  oauth2-proxy-development.sh.sample  pyproject.toml
main/: settings.py  test_settings.py  urls.py
simplejwtdemo/: apps.py  urls.py  views.py
tests/: test_get_claims_from_jwt.py  test_get_message.py
